feat: auth req
