# doc/api.yaml
@@ -117,78 +117,104 @@ security:
   - bearerAuth: []
 
 paths:
-  /login:
-#    post:
-#      tags:
-#        - Login
-#      security: []
-#      summary: Login
-#      description: Logins a user and returns a JWT-token
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              type: object
-#              title: example
-#              properties:
-#                login:
-#                  type: string
-#                  description: Username
-#                password:
-#                  type: string
-#                  description: Password
-#              required:
-#                - password
-#                - login
-#      responses:
-#        200:
-#          description: Successful login.
-#          content:
-#            application/json:
-#              schema:
-#                type: object
-#                properties:
-#                  token:
-#                    type: string
-#                description: JWT Token
-#        403:
-#          description: Incorrect login or password
-#  /signup:
-#    post:
-#      tags:
-#        - Signup
-#      security: []
-#      summary: Signup
-#      description: Signup a user
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              type: object
-#              title: example
-#              properties:
-#                login:
-#                  type: string
-#                  minLength: 3
-#                  maxLength: 255
-#                  description: Username
-#                password:
-#                  type: string
-#                  format: password
-#                  pattern: ^[a-zA-Z0-9]{3,30}
-#                  description: Password
-#              required:
-#                - login
-#                - password
-#      responses:
-#        204:
-#          description: Successful signup
-#        400:
-#          description: Bad request
-#        409:
-#          description: Conflict. Login already exists
+  /auth/login:
+    post:
+      tags:
+        - Login
+      security: []
+      summary: Login
+      description: Logins a user and returns a JWT-token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  description: Username
+                password:
+                  type: string
+                  description: Password
+              required:
+                - password
+                - login
+      responses:
+        200:
+          description: Successful login.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                description: JWT Token
+        403:
+          description: Incorrect login or password
+  /auth/signup:
+    post:
+      tags:
+        - Signup
+      security: []
+      summary: Signup
+      description: Signup a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                login:
+                  type: string
+                  minLength: 3
+                  maxLength: 255
+                  description: Username
+                password:
+                  type: string
+                  format: password
+                  pattern: ^[a-zA-Z0-9]{3,30}
+                  description: Password
+              required:
+                - login
+                - password
+      responses:
+        204:
+          description: Successful signup
+        400:
+          description: Bad request
+        409:
+          description: Conflict. Login already exists
+  /auth/refresh:
+    post:
+      tags:
+        - Refresh
+      summary: Update tokens
+      description: Get new pair of Access token and Refresh token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              title: example
+              properties:
+                refreshToken :
+                  type: string
+                  description: refreshToken                
+              required:
+                - refreshToken 
+      responses:
+        200:
+          description: Successful updated
+        400:
+          description: Bad request
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /user:
     get:
       tags:
@@ -204,8 +230,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
-        #401:
-          #$ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Users
@@ -237,7 +263,7 @@ paths:
                 $ref: '#/components/schemas/User'
         400:
           description: Bad request. body does not contain required fields
-        #401:
+        401:
           $ref: '#/components/responses/UnauthorizedError'
   /user/{userId}:
     parameters:
@@ -261,8 +287,8 @@ paths:
                 $ref: '#/components/schemas/User'
         400:
           description: Bad request. userId is invalid (not uuid)
-        #401:
-          #$ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
 
@@ -314,8 +340,8 @@ paths:
                     example: 1655999999
         400:
           description: Bad request. userId is invalid (not uuid)
-        #401:
-          #$ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         403:
           description: oldPassowrd is wrong
         404:
@@ -331,8 +357,8 @@ paths:
           description: The user has been deleted
         400:
           description: Bad request. userId is invalid (not uuid)
-        #401:
-          #$ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: User not found
   /track:
@@ -350,8 +376,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Track'
-        #401:
-          #$ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Track
@@ -387,8 +413,8 @@ paths:
                 $ref: '#/components/schemas/Track'
         400:
           description: Bad request. body does not contain required fields
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /track/{id}:
     parameters:
       - name: id
@@ -411,8 +437,8 @@ paths:
                 $ref: '#/components/schemas/Track'
         400:
           description: Bad request. trackId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
     put:
@@ -475,8 +501,8 @@ paths:
                     nullable: true
         400:
           description: Bad request. trackId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
     delete:
@@ -489,8 +515,8 @@ paths:
           description: Delelted succesfully
         400:
           description: Bad request. trackId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
   /album:
@@ -508,8 +534,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Album'
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Album
@@ -543,8 +569,8 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           description: Bad request. body does not contain required fields
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /album/{id}:
     parameters:
       - name: id
@@ -567,8 +593,8 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           description: Bad request. albumId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
     put:
@@ -604,8 +630,8 @@ paths:
                 $ref: '#/components/schemas/Album'
         400:
           description: Bad request. albumId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
     delete:
@@ -618,8 +644,8 @@ paths:
           description: Deleted succesfully
         400:
           description: Bad request. albumId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
   /artist:
@@ -637,8 +663,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Artist'
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
     post:
       tags:
         - Artist
@@ -667,8 +693,8 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           description: Bad request. body does not contain required fields
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /artist/{id}:
     parameters:
       - name: id
@@ -691,8 +717,8 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           description: Bad request. artistId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
     put:
@@ -723,8 +749,8 @@ paths:
                 $ref: '#/components/schemas/Artist'
         400:
           description: Bad request. artistId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
     delete:
@@ -737,8 +763,8 @@ paths:
           description: Delelted succesfully
         400:
           description: Bad request. artistId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
   /favs:
@@ -754,8 +780,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Favorites'
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
   /favs/track/{id}:
     parameters:
       - name: id
@@ -774,8 +800,8 @@ paths:
           description: Added succesfully
         400:
           description: Bad. trackId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           description: Track with id doesn't exist.
     delete:
@@ -788,8 +814,8 @@ paths:
           description: Deleted succesfully
         400:
           description: Bad. trackId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Track was not found.
   /favs/album/{id}:
@@ -810,8 +836,8 @@ paths:
           description: Added succesfully
         400:
           description: Bad. albumId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           description: Album with id doesn't exist.
     delete:
@@ -824,8 +850,8 @@ paths:
           description: Deleted succesfully
         400:
           description: Bad. albumId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Album was not found.
   /favs/artist/{id}:
@@ -846,8 +872,8 @@ paths:
           description: Added succesfully
         400:
           description: Bad request. artistId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         422:
           description: Artist with id doesn't exist.
     delete:
@@ -860,7 +886,7 @@ paths:
           description: Deleted succesfully
         400:
           description: Bad request. artistId is invalid (not uuid)
-#        401:
-#          $ref: '#/components/responses/UnauthorizedError'
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
         404:
           description: Artist was not found.
